k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-server
spec:
  rules:
    - host: "auth-server"
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: auth-server
                port:
                  number: 9999
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe
spec:
  rules:
    - host: "currency-converter.io"
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: fe
                port:
                  number: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
spec:
  rules:
    - host: "currency-converter.api-gateway.io"
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: api-gateway
                port:
                  number: 8755
---
